# MIPT_ATP

./: .gitignore  CMakeLists.txt  clear  create
.github/workflows/: action.yml  tmp.yml
task1/: run.sh
task2/: CMakeLists.backup  CMakeLists.txt  clr  re
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: .all_test.cpp.swp  main.cpp  main.h  main_test.cpp  testing.cpp
task4/: .gitignore
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.h  WeatherTestCase.cpp
task5/: .gitignore
task5/.github/workflows/: main.yml
task5/actions/: Dockerfile  action.yml  entrypoint.sh
